objects/Procurement_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Site_Page_Footer__c</fullName>
        <description>Site page Footer for Procurement</description>
        <label>Site Page Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Page_Header__c</fullName>
        <description>Site page header for Group procurement</description>
        <label>Site Page Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sites_Page_Header_Subscript__c</fullName>
        <description>The header subscript that will display on the Group Procurement sites page hosted</description>
        <label>Sites Page Header Subscript</label>
        <type>TextArea</type>
    </fields>
    <label>Procurement Settings</label>
</CustomObject>